test_report.txt

> starter_helpi@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/testframe1/testframe1/node_modules/axios/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import axios from './lib/axios.js';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      1 | [90m// RTC.tsx[39m
      2 | [36mimport[39m [33mReact[39m[33m,[39m { useEffect[33m,[39m useRef[33m,[39m useState } [36mfrom[39m [32m'react'[39m[33m;[39m
    > 3 | [36mimport[39m axios [36mfrom[39m [32m'axios'[39m[33m;[39m
        | ^
      4 |
      5 | [36minterface[39m [33mRTCProps[39m {
      6 |     handleVisionResult[33m:[39m (detectedObjects[33m:[39m any[]) [33m=>[39m [36mvoid[39m[33m;[39m  [90m// Function to pass detected objects to parent[39m

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/RTC.tsx:3:1)
      at Object.<anonymous> (src/App.tsx:3:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

--------------------|---------|----------|---------|---------|-------------------
File                | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------------|---------|----------|---------|---------|-------------------
All files           |       0 |        0 |       0 |       0 |                   
 App.tsx            |       0 |        0 |       0 |       0 | 19-134            
 RTC.tsx            |       0 |        0 |       0 |       0 | 8-90              
 bpoly.ts           |       0 |        0 |       0 |       0 | 9-104             
 index.tsx          |       0 |      100 |     100 |       0 | 7-19              
 movementUtils.ts   |       0 |        0 |       0 |       0 | 6-22              
 polygonUtils.ts    |       0 |      100 |       0 |       0 | 6-14              
 reportWebVitals.ts |       0 |        0 |       0 |       0 | 3-10              
 speech.tsx         |       0 |        0 |       0 |       0 | 14-65             
--------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        2.406 s
Ran all test suites.
